# eln-ldap-sync

./: .env.example  .gitignore  Pipfile  README.md  group_whitelist.csv  setup.cfg  setup.py
elabftw_usersync/: __init__.py  elabftw.py  helper.py  idm_ldap.py  logger_config.py  main.py  processing.py
tests/: __init__.py  ldap_objects.json  test_elabftw.py  test_helper.py  test_idm_ldap.py
