; @formatting: off
[metadata]
name = elabftw_usersync
version = 1.0.1
author = ULB Münster
author_email = fdm@uni-muenster.de
description = Sync Script that reads user data from an LDAP Server and creates users in an elabFTW instance
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ulbmuenster/eln-ldap-sync

[options]
packages = find:
install_requires =
    python-ldap
    requests
    progress
    python-dotenv
    loguru
    click

tests_require =
    pytest
    pytest-cov
    coverage
    pytest-mock
    python-ldap-faker
    requests_mock
    hypothesis
    isort
    black

[options.entry_points]
console_scripts =
    elabus = elabftw_usersync.main:start_sync

[requires]
python_version = "3.10"